<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of anycook Einkaufszettel
  ~ Copyright (C) 2014 Jan Graßegger, Claudia Sichting
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [http://www.gnu.org/licenses/].
  -->

<resources>
  <string name="app_name">Einkaufszettel</string>
  <string name="anycook">anycook</string>
  <string name="recipe_transition">recipe_transition</string>

  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>

  <string name="search">suchen</string>
  <string name="share">teilen</string>
  <string name="amount_hint">Wieviel?</string>

  <string name="cancel">abbrechen</string>
  <string name="yes">Ja</string>
  <string name="no">Nein</string>
  <string name="change">ändern</string>

  <string name="image_description">bild</string>
  <string name="grocery_hint">Was brauchst du?</string>
  <string name="add_ingredients">Zutaten hinzufügen</string>

  <string name="clear_ingredients">Alle Zutaten löschen?</string>
  <string name="clear">Aufräumen</string>
  <string name="details">Details</string>
  <string name="ingredient_amount">Menge</string>
  <string name="ingredient">Zutat</string>
  <string name="ingredients">Zutaten</string>
  <string name="nothing_found">Leider nichts gefunden. :-(</string>
  <string name="drawer_text">Menüpunkt</string>
  <string name="icon">Icon</string>
  <string name="ingredients_for">Zutaten für</string>
  <string name="persons">Personen:</string>
  <string name="for_x_people">Für wie viele Personen?</string>
  <string name="preparation">Zubereitung</string>
  <string name="set">OK</string>
  <string name="recipe_loading">Aktualisiere Rezepte- und Zutatendatenbank</string>
  <string name="skip_button"><![CDATA[Überspringen >>]]></string>
  <string name="recipe_image_content_description">Bild des Rezepts</string>
  <string name="duration">Dauer</string>
  <string name="reload_database">Datenbank aktualisieren</string>
  <string name="category">Kategorie</string>
  <string name="difficulty">Schwierigkeit</string>
  <string name="calories">Kalorien</string>
  <string name="favorites">Favoriten</string>
  <string name="ofFive">%d/5</string>
</resources>

