<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of anycook Einkaufszettel
  ~ Copyright (C) 2014 Jan Graßegger, Claudia Sichting
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [http://www.gnu.org/licenses/].
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/Theme.AnycookTheme"
              android:background="@color/any_green"
              android:gravity="center"
              android:paddingTop="100sp">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:contentDescription="@string/anycook"
            android:src="@drawable/anycook_big"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/any_white_gray"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:max="2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reacipe_loading"
            android:textColor="@color/any_white_gray"
            android:textSize="14sp"/>

    <TextView
        android:id="@+id/skip"
        android:clickable="true"
        android:onClick="onSkipClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/any_white_gray"
        android:layout_marginTop="100sp"
        android:text="@string/skip_button"
        android:textSize="14sp" />
</LinearLayout>
