<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of anycook Einkaufszettel
  ~ Copyright (C) 2015 Jan Graßegger, Claudia Sichting
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [http://www.gnu.org/licenses/].
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="30dp"
      android:paddingEnd="40dp"
      android:paddingBottom="16dp"
      android:paddingStart="16dp">

    <TextView
        style="@style/TextAppearanceAnycook"
        android:id="@+id/recipe_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp">

      <TextView
          style="@style/TextAppearanceAnycook.Strong"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/duration"
          android:paddingStart="0sp"
          android:paddingEnd="5sp"/>

      <TextView
          style="@style/TextAppearanceAnycook"
          android:id="@+id/recipe_time_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/TextAppearanceAnycook.Strong"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/category"
          android:paddingStart="0sp"
          android:paddingEnd="5sp"/>

      <TextView
          style="@style/TextAppearanceAnycook"
          android:id="@+id/recipe_category"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/TextAppearanceAnycook.Strong"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/difficulty"
          android:paddingStart="0sp"
          android:paddingEnd="5sp"/>

      <TextView
          style="@style/TextAppearanceAnycook"
          android:id="@+id/recipe_skill"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/TextAppearanceAnycook.Strong"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/calories"
          android:paddingStart="0sp"
          android:paddingEnd="5sp"/>

      <TextView
          style="@style/TextAppearanceAnycook"
          android:id="@+id/recipe_calorie"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/number_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearanceAnycook"
        android:drawableStart="@drawable/ic_favorite_red_24dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="5dp"/>
  </LinearLayout>
</ScrollView>
